syntax = "proto3";

package service1;

service Service1 {
  rpc FindOne (ById) returns (Hello);
  rpc CallOther(ById) returns (Hello);
}

message Hello {
  int32 id = 1;
  string name = 2;
}
message ById {
  int32 id = 1;
}
